# x16-emulator

./: .gitignore  CMakeLists.txt  GetGitRevision.cmake.in  Makefile  README.md  RELEASES.md  quickstart-linux.md  test.cfg
.gh/: config.js  header_footer.md  markdown.css
.github/workflows/: build.yml  pdf.yml
makecart/: main.c
src/: audio.c  cartridge.c  cartridge.h  debugger.c  debugger.h  disasm.c  disasm.h  dylib.h  endian.h  files.c  files.h  glue.h  i2c.c  i2c.h  icon.c  ieee.c  ieee.h  iso_8859_15.c  iso_8859_15.h  javascript_interface.c  joystick.c  keyboard.c  main.c  makecart.c  makecart_javascript_interface.c  memory.c  memory.h  midi.c  midi.h  rendertext.c  rtc.c  rtc.h  sdcard.c  sdcard.h  serial.c  smc.c  smc.h  testbench.c  testbench.h  timing.c  (+15 more)
src/cpu/: 6502.opcodes  65c02.h  65c02.opcodes  65c816.opcodes  buildtables.py  fake6502.c  fake6502.h  instructions.h  mnemonics.h  modes.h  registers.h  support.h  tables.h
testbench/: cx16gs_test.py  testbench.py
webassembly/: main.js  styles.css
